Studies about HTML-CSS-JS - PortfolioWEB - by FRONT - 38m45s
Creating a website portfolio using HTML, CSS and JS-JQuery.

--- a/portifolioWebSite/index.html
+++ b/portifolioWebSite/index.html
@@ -45,6 +45,11 @@
             <div class="about-content">
                 <div class="column-left">
                     <img src="image/img-1.jpg" alt="Sobre 01">
+                    <div class="column-right">
+                        <div class="text">Sou Gustavo e sou <span>Youtuber</span> </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, temporibus iste quos sunt, rem nihil numquam cumque aut corporis, reiciendis aliquam eligendi itaque minima quam esse? Vero eveniet repellendus laboriosam!</p>
+                        <a href="#">Download CV</a>
+                    </div>
                 </div>
             </div>
         </div>
