Studies about HTML-CSS-JS - PortfolioWEB - by FRONT - 51m13s
Creating a website portfolio using HTML, CSS and JS-JQuery.

--- a/portifolioWebSite/index.html
+++ b/portifolioWebSite/index.html
@@ -43,12 +43,46 @@
         <div class="max-width">
             <h2 class="title">Sobre</h2>
             <div class="about-content">
-                <div class="column-left">
-                    <img src="image/img-1.jpg" alt="Sobre 01">
-                    <div class="column-right">
-                        <div class="text">Sou Gustavo e sou <span>Youtuber</span> </div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, temporibus iste quos sunt, rem nihil numquam cumque aut corporis, reiciendis aliquam eligendi itaque minima quam esse? Vero eveniet repellendus laboriosam!</p>
-                        <a href="#">Download CV</a>
+                <!-- <div class="column-left">
+                     -->
+                <div class="column left">
+                    <img src="image/img-1.jpg" alt="Sobre 01">                    
+                </div>
+                <div class="column right">
+                    <div class="text">Sou Gustavo e sou <span>Youtuber</span> </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, temporibus iste quos sunt, rem nihil numquam cumque aut corporis, reiciendis aliquam eligendi itaque minima quam esse? Vero eveniet repellendus laboriosam!</p>
+                    <a href="#">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- session - servicos -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Serviços</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="brush-outline"></ion-icon>
+                        <div class="text">Web Desing</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum maiores non, autem molestiae officiis eius?</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="trending-up-outline"></ion-icon>
+                        <div class="text">Anúncios</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum maiores non, autem molestiae officiis eius?</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="code-outline"></ion-icon>
+                        <div class="text">Desing de Apps</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum maiores non, autem molestiae officiis eius?</p>
                     </div>
                 </div>
             </div>
