--- a/portifolioWebSite/index.html
+++ b/portifolioWebSite/index.html
@@ -89,6 +89,21 @@
         </div>
     </section>
 
+    <!-- session - especialidade -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">Especialidades</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">Minhas habilidades: criativas e experiências</div>
+                </div>
+                <div class="column right">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
     <br>
     <br>
     <br>
