--- a/portifolioWebSite/index.html
+++ b/portifolioWebSite/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio | Front</title>
+    <title>Portifólio | Front</title>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -96,27 +97,137 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Minhas habilidades: criativas e experiências</div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium nisi dicta sequi a ipsa adipisci porro ea obcaecati aliquam! Reprehenderit ullam quod laborum vitae, dolor voluptates nemo soluta magnam mollitia magni! Maiores iste officia cupiditate quidem odio! Repellat veniam laudantium saepe, officia eum asperiores reiciendis qui temporibus consectetur ad, dolor voluptatibus eveniet optio expedita pariatur rerum ab eos exercitationem neque.</p>
+                    <a href="#">Mais informações</a>
                 </div>
                 <div class="column right">
-                    
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>83%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>79%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>88%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>87%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- session - equipe -->
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">Minha Equipe</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="image/img-1.jpg" alt="">
+                        <div class="text">Gustavo</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque expedita impedit aut excepturi voluptate tempora.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/img-2.jpg" alt="">
+                        <div class="text">Fernando</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque expedita impedit aut excepturi voluptate tempora.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/img-3.jpg" alt="">
+                        <div class="text">Mariana</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque expedita impedit aut excepturi voluptate tempora.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/img-4.jpg" alt="">
+                        <div class="text">Fabiana</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque expedita impedit aut excepturi voluptate tempora.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/img-5.jpg" alt="">
+                        <div class="text">Sueli</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque expedita impedit aut excepturi voluptate tempora.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- sessao - contato -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contato</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Fale Conosco</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime impedit facilis cupiditate voluptates praesentium cumque nobis rerum perspiciatis libero, atque, beatae ad adipisci necessitatibus unde pariatur expedita fugiat fuga aspernatur, quibusdam rem dolorum. In, recusandae vero esse quisquam architecto maxime possimus provident tenetur sunt! Accusantium nam quam enim architecto asperiores.</p>
+                <!-- </div> -->
+                    <div class="icons">
+                        <div class="row">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Nome</div>
+                                <div class="sub-title">Gustavo Rodrigues</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ion-icon name="earth-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Endereço</div>
+                                <div class="sub-title">Lins, SP</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">aeiou@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 </body>
 
 </html>
