--- a/portifolioWebSite/index.html
+++ b/portifolioWebSite/index.html
@@ -11,16 +11,19 @@
 </head>
 
 <body>
+    <div class="scroll-up-btn">
+        <ion-icon name="chevron-up-outline"></ion-icon>
+    </div>
     <div class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Port<span>fólio</span></a></div>
             <ul class="menu">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Especialidade</a></li>
-                <li><a href="#">Equipe</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#skills">Especialidade</a></li>
+                <li><a href="#teams">Equipe</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
             <div class="menu-btn"><!-- menu hamburger-->
                 <ion-icon name="menu-outline"></ion-icon>
@@ -33,13 +36,13 @@
             <div class="home-content">
                 <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Gustavo Rodrigues</div>
-                <div class="text-3">eu sou <span>Developer</span></div>
+                <div class="text-3">eu sou <span class="typing"></span></div> <!-- class typing - EFEITO DIGITACAO - script.js -->
                 <a href="#">Contratar-me</a>
             </div>
         </div>
     </section>
 
-    <!-- session - sobre -->
+    <!-- sessao - sobre -->
     <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">Sobre</h2>
@@ -50,7 +53,7 @@
                     <img src="image/img-1.jpg" alt="Sobre 01">                    
                 </div>
                 <div class="column right">
-                    <div class="text">Sou Gustavo e sou <span>Youtuber</span> </div>
+                    <div class="text">Sou Gustavo e sou <span class="typing-2"></span> </div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, temporibus iste quos sunt, rem nihil numquam cumque aut corporis, reiciendis aliquam eligendi itaque minima quam esse? Vero eveniet repellendus laboriosam!</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -58,7 +61,7 @@
         </div>
     </section>
 
-    <!-- session - servicos -->
+    <!-- sessao - servicos -->
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">Serviços</h2>
@@ -90,7 +93,7 @@
         </div>
     </section>
 
-    <!-- session - especialidade -->
+    <!-- sessao - especialidade -->
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">Especialidades</h2>
@@ -141,7 +144,7 @@
         </div>
     </section>
 
-    <!-- session - equipe -->
+    <!-- sessao - equipe -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">Minha Equipe</h2>
@@ -218,15 +221,45 @@
                         </div>
                     </div>
                 </div>
+                <div class="column right">
+                    <div class="text">Mensagem</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Nome" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="field">
+                                <input type="text" placeholder="Sobrenome" required>
+                            </div>
+                            <div class="field textarea">
+                                <textarea cols="30" rows="10" placeholder="Escrever...." required></textarea>
+                            </div>
+                            <div class="button">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
+
+    <!-- sessao - footer -->
+    <footer>
+        <span>Criado por <a href="#">GSM9</a> | Todos os direitos reservados 2022</span>
+    </footer>
     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 </body>
 
